--- a/time/style.css
+++ b/time/style.css
@@ -30,21 +30,38 @@
 	/* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
+html {
+	height: 100%;
+}
+
 body {
-	margin: 40px auto 20px;
+	/* margin: 40px auto 20px; */
+	margin: 0;
 	background: var(--main-bg-color);
 	color: var(--main-text-color);
 	font-family: Helvetica, Arial;
 	text-align: justify;
-	overflow: hidden;
 	display: flex;
+	width: 100%;
+	height: 100%;
 	justify-content: center;
 	align-items: center;
 	overflow: hidden;
 	position: relative;
 }
 
+p:first-of-type {
+	margin-top: 0;
+}
+
+p:last-of-type {
+	margin-bottom: 0;
+}
+
 p, span {
+	margin: 0;
+	margin-top: 1em;
+	margin-bottom: 1em;
 	color: var(--main-text-color);
 	transition: color 0.4s ease-out;
 	-ms-transition: color 0.4s ease-out;
@@ -69,7 +86,7 @@ p, span {
 }
 
 #text-clock {
-	width: 250px;
+	width: min-content;
 	position: relative;
 	text-transform: uppercase;
 }
@@ -96,16 +113,6 @@ p, span {
 
 #line-10, #line-10 span {
 	letter-spacing: 11.6px;
-}
-
-#logo {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-decoration: none;
-	font-size: 40px;
-	position: absolute;
-	margin-top: 650px;
 }
 
 #logo:hover {
